chore(release): prepare v1.6.1
Security fixes and improvements from audit:

## Added
- Security functions in scripts/lib/common.sh
  - log_secret(): Masks secrets in log output
  - log_info_secure(): Alias for secure logging
- HCL parsing functions to reduce code duplication
  - parse_hcl_block(), parse_hcl_block_first(), parse_hcl_block_unique()
  - validate_choice(): Validates value against allowed options
- Traefik security headers (CSP, HSTS) in monitoring and tooling stacks

## Changed
- Proxmox provider version synchronized to ~> 0.94 across all environments
- Step-ca Docker image pinned to 0.27.5 (was latest)
- terraform.tfvars.example uses placeholder instead of weak example password

## Security
- Fixed weak example password in monitoring terraform.tfvars.example
- Added CSP headers to prevent XSS attacks
- Pinned Docker images to avoid supply chain attacks

--- a/infrastructure/proxmox/environments/monitoring/terraform.tfvars.example
+++ b/infrastructure/proxmox/environments/monitoring/terraform.tfvars.example
@@ -103,7 +103,8 @@ monitoring = {
   retention_days = 30
 
   # Mot de passe admin Grafana
-  grafana_admin_password = "ChangeMePlease123!"
+  # Mot de passe admin Grafana (generer avec: openssl rand -base64 32)
+  grafana_admin_password = "${GRAFANA_ADMIN_PASSWORD:?required}"
 
   # Notifications Telegram (optionnel)
   telegram = {
